# sample_fortran_with_CMake

./: README.md
minimum/: CMakeLists.txt  README.md  main.f90  reset_folder_build.sh
minimum/package/: CMakeLists.txt  module.f90  pkg_sample.mod
